--- a/adm/ingreso.html
+++ b/adm/ingreso.html
@@ -20,7 +20,7 @@
               <div class="col-lg-6">
                 <div class="card-body p-md-5 mx-md-4">
                   <div class="text-left pt-1 mb-5 pb-1">
-                    <button class="btn btn-outline-secondary btn-block fa-lg " type="button">Regresar a Cobertura</button>
+                    <button class="btn btn-outline-secondary btn-block fa-lg " type="button" onclick=""><a href="../cobertura.html">Regresa a Cobertura</a></button>
                   </div>
   
                   <div class="text-center">
