--- a/cobertura-s3.html
+++ b/cobertura-s3.html
@@ -9,7 +9,7 @@
   <link href="css/dashboard.css" rel="stylesheet">
   <link href="css/font.css" rel="stylesheet">
   <link href="css/tabla.css" rel="stylesheet">
-  <link href="css/tabla-colores.css" rel="stylesheet">
+  <!-- <link href="css/tabla-colores.css" rel="stylesheet"> -->
   <link href="css/grafica.css" rel="stylesheet">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -31,7 +31,7 @@
 
         <a class="navbar-brand mb-0 h1" href="#">
 
-          Tablero Estadístico
+          Tablero Estadístico de cobertura nacional de interconexión
         </a>
         <div class="nav-menu">
           <nav>
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="col-12">
         <div class="page-title-box">
-          <h4>Cobertura Nacional de Interconexión</h4>
+          <h4>&nbsp;</h4>
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@
           <div class="card-body scroll">
             <table class="cobertura_table rounded ">
               <thead>
-                <tr>
+<!--                 <tr>
                   <th rowspan="2">
                     <a href="">ENTIDAD FEDERATIVA</a>
                     
@@ -128,8 +128,13 @@
                     Municipal
                   </th>
 
-                </tr>
+                </tr> -->
                 <tr>
+                   <th > 
+                  <!-- rowspan="2" -->
+                    <a href="">ENTIDAD FEDERATIVA</a>
+                    
+                  </th>
                   <th>
                     <a href=""><div class="icon ico-t"></div></a>
                   </th>
