--- a/cobertura.html
+++ b/cobertura.html
@@ -70,156 +70,151 @@
                     <a href="">ENTIDAD FEDERATIVA</a>
 
                   </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-t"></div>
+                  <th >
+                    <a href="" >
+                      <div class="icon ico-t" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Total"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s1"></div>
+                      <div class="icon ico-s1"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="entes conectados Sistema de declaraciones"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s2"></div>
+                      <div class="icon ico-s2"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Sistema de Servidores Públicos en contrataciones"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s3-oic"></div>
+                      <div class="icon ico-s3-oic"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="S3. Órganos Internos de Control"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s3-fiscalizadores"></div>
+                      <div class="icon ico-s3-fiscalizadores"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="S3. Fiscalizadores"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s3-tribunales"></div>
+                      <div class="icon ico-s3-tribunales"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="S3. Tribunales"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s6"></div>
+                      <div class="icon ico-s6"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Sistema de Contrataciones"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s1-porcentaje"></div>
+                      <div class="icon ico-s1-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S1"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s2-porcentaje"></div>
+                      <div class="icon ico-s2-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S2"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s6-porcentaje"></div>
+                      <div class="icon ico-s6-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S6"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-0con"></div>
+                      <div class="icon ico-0con"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes no conectados a ningún sistema"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-1con"></div>
+                      <div class="icon ico-1con"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes conectados sólo a un sistema"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-2con"></div>
+                      <div class="icon ico-2con"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes conectados a dos sistemas"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-3con"></div>
+                      <div class="icon ico-3con"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes conectadas a tres sistemas"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-0con-porcentaje"></div>
+                      <div class="icon ico-0con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes no conectados  a ningún un sistema"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-1con-porcentaje"></div>
+                      <div class="icon ico-1con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes conectados a un sistema"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-2con-porcentaje"></div>
-                    </a>
-                  </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-0con-porcentaje"></div>
+                      <div class="icon ico-2con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes conectadas a dos sistemas"></div>
                     </a>
                   </th>
 
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-e"></div>
+                      <div class="icon ico-e"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Estatales del ámbito Ejecutivo"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-l"></div>
+                      <div class="icon ico-l"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Estatales del ámbito Legislativo"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-j"></div>
+                      <div class="icon ico-j"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Estatales del ámbito Judicial"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-a"></div>
+                      <div class="icon ico-a"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Estatales de los Órganos Constitucionales Autónomos"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-e-porcentaje"></div>
+                      <div class="icon ico-e-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes Estatales del ámbito Ejecutivo"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-l-porcentaje"></div>
+                      <div class="icon ico-l-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes Estatales del ámbito Legislativo"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-j-porcentaje"></div>
+                      <div class="icon ico-j-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes Estatales del ámbito Judicial"></div>
                     </a>
                   </th>
                   <th class="municipal">
                     <a href="">
-                      <div class="icon ico-a-porcentaje"></div>
+                      <div class="icon ico-a-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes Estatales de los Órganos Constitucionales Autónomos"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-em"></div>
+                      <div class="icon ico-em"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Municipales del ámbito Ejecutivo conectados"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-cm"></div>
+                      <div class="icon ico-cm"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Cabeceras municipales conectadas"></div>
                     </a>
                   </th>
 
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-em-porcentaje"></div>
+                      <div class="icon ico-em-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes Estatales del ámbito Ejecutivo conectados"></div>
                     </a>
                   </th>
                   <th class="estatal">
                     <a href="">
-                      <div class="icon ico-cm-porcentaje"></div>
+                      <div class="icon ico-cm-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Cabeceras Municipales conectadas"></div>
                     </a>
                   </th>
                 </tr>
@@ -3691,6 +3686,16 @@ S2 = 117"><img src="imgs/pix_rojo.png" alt="la entidad" height="400"></a>
 
 
   </div>
+
+  <script>
+    // Initialize tooltips
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+    </script>
+
+
   <script>
 
 
