íconos conexiones y calificación

--- a/cobertura.html
+++ b/cobertura.html
@@ -77,15 +77,15 @@
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s1"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="entes conectados Sistema de declaraciones"></div>
+                      <div class="icon ico-s1"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes conectados al Sistema de declaraciones"></div>
                     </a>
                   </th>
                   <th>
                     <a href="">
-                      <div class="icon ico-s2"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Sistema de Servidores Públicos en contrataciones"></div>
+                      <div class="icon ico-s2"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes conectados al Sistema de Servidores Públicos en contrataciones"></div>
                     </a>
                   </th>
-                  <th>
+<!--                   <th>
                     <a href="">
                       <div class="icon ico-s3-oic"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="S3. Órganos Internos de Control"></div>
                     </a>
@@ -99,25 +99,10 @@
                     <a href="">
                       <div class="icon ico-s3-tribunales"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="S3. Tribunales"></div>
                     </a>
-                  </th>
+                  </th> -->
                   <th>
                     <a href="">
-                      <div class="icon ico-s6"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Sistema de Contrataciones"></div>
-                    </a>
-                  </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-s1-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S1"></div>
-                    </a>
-                  </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-s2-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S2"></div>
-                    </a>
-                  </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-s6-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S6"></div>
+                      <div class="icon ico-s6"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes conectados al Sistema de Contrataciones"></div>
                     </a>
                   </th>
                   <th>
@@ -140,22 +125,6 @@
                       <div class="icon ico-3con"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes conectadas a tres sistemas"></div>
                     </a>
                   </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-0con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes no conectados  a ningún un sistema"></div>
-                    </a>
-                  </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-1con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes conectados a un sistema"></div>
-                    </a>
-                  </th>
-                  <th>
-                    <a href="">
-                      <div class="icon ico-2con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes conectadas a dos sistemas"></div>
-                    </a>
-                  </th>
-
                   <th class="estatal">
                     <a href="">
                       <div class="icon ico-e"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Estatales del ámbito Ejecutivo"></div>
@@ -178,6 +147,48 @@
                   </th>
                   <th class="estatal">
                     <a href="">
+                      <div class="icon ico-em"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Municipales del ámbito Ejecutivo conectados"></div>
+                    </a>
+                  </th>
+                  <th class="estatal">
+                    <a href="">
+                      <div class="icon ico-cm"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Cabeceras municipales conectadas"></div>
+                    </a>
+                  </th>                  
+                  <th>
+                    <a href="">
+                      <div class="icon ico-s1-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S1"></div>
+                    </a>
+                  </th>
+                  <th>
+                    <a href="">
+                      <div class="icon ico-s2-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S2"></div>
+                    </a>
+                  </th>
+                  <th>
+                    <a href="">
+                      <div class="icon ico-s6-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de entes conectados al S6"></div>
+                    </a>
+                  </th>                  
+                  <th>
+                    <a href="">
+                      <div class="icon ico-0con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes no conectados  a ningún sistema"></div>
+                    </a>
+                  </th>
+                  <th>
+                    <a href="">
+                      <div class="icon ico-1con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes conectados a un sistema"></div>
+                    </a>
+                  </th>
+                  <th>
+                    <a href="">
+                      <div class="icon ico-2con-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes conectadas a dos sistemas"></div>
+                    </a>
+                  </th>
+
+
+                  <th class="estatal">
+                    <a href="">
                       <div class="icon ico-e-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes Estatales del ámbito Ejecutivo"></div>
                     </a>
                   </th>
@@ -196,16 +207,7 @@
                       <div class="icon ico-a-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Entes Estatales de los Órganos Constitucionales Autónomos"></div>
                     </a>
                   </th>
-                  <th class="estatal">
-                    <a href="">
-                      <div class="icon ico-em"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Entes Municipales del ámbito Ejecutivo conectados"></div>
-                    </a>
-                  </th>
-                  <th class="estatal">
-                    <a href="">
-                      <div class="icon ico-cm"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Cabeceras municipales conectadas"></div>
-                    </a>
-                  </th>
+
 
                   <th class="estatal">
                     <a href="">
@@ -217,6 +219,16 @@
                       <div class="icon ico-cm-porcentaje"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Porcentaje de Cabeceras Municipales conectadas"></div>
                     </a>
                   </th>
+                  <th>
+                    <a href="">
+                      <div class="icon ico-con"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Validación"></div>
+                    </a>
+                  </th>
+                  <th>
+                    <a href="">
+                      <div class="icon ico-cal"  data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip" title="Calificación"></div>
+                    </a>
+                  </th>                  
                 </tr>
               </thead>
               <tbody>
