--- a/icons-reference.html
+++ b/icons-reference.html
@@ -163,6 +163,14 @@
           <div class="icon ico-t"></div>
           <input type="text" readonly="readonly" value="t">
         </li>
+        <li>
+          <div class="icon ico-cal"></div>
+          <input type="text" readonly="readonly" value="cal">
+        </li>
+        <li>
+          <div class="icon ico-con"></div>
+          <input type="text" readonly="readonly" value="con">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -313,6 +321,14 @@
         <li>
           <div data-icon="K" class="icon"></div>
           <input type="text" readonly="readonly" value="K">
+        </li>
+        <li>
+          <div data-icon="L" class="icon"></div>
+          <input type="text" readonly="readonly" value="L">
+        </li>
+        <li>
+          <div data-icon="M" class="icon"></div>
+          <input type="text" readonly="readonly" value="M">
         </li>
       </ul>
     </div>
