--- a/adm/index.html
+++ b/adm/index.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
-  <title>Entes</title>
+  <title>Tablero Estadístico: Bienvenida</title>
 
 
   <style>
@@ -46,29 +46,24 @@
 
         <a class="navbar-brand mb-0 h1" href="#">
 
-          Entes
+          Sistema de Administración
         </a>
         <div class="nav-menu">
           <nav>
             <ul>
               <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/todo.svg" alt="PDN">
-                  <p>Todo</p>
+                  <img src="../imgs/menu/entes.svg" alt="PDN">
+                  <p>Entes</p>
                 </a>
               </li>
               <li><a href="adm/ingreso.html">
-                <img src="../imgs/menu/tabla-larga.svg" alt="PDN">
-                <p>Tabla larga</p>
+                <img src="../imgs/menu/admin.svg" alt="PDN">
+                <p>Administradores</p>
               </a>
             </li>
-            <li><a href="adm/ingreso.html">
-              <img src="../imgs/menu/tabla-corta.svg" alt="PDN">
-              <p>Tabla corta</p>
-            </a>
-          </li>
               <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/menu.svg" alt="PDN">
-                  <p>Menu</p>
+                  <img src="../imgs/menu/pwd.svg" alt="PDN">
+                  <p>Cambiar contraseña</p>
                 </a>
               </li>
               
@@ -111,7 +106,7 @@
 
 
                   <b>Hoy es Martes, 12 de Marzo de 2024</b>
-                  <p style='font-size: 2vw;'>Se muestran resultados</p>
+                  <p style='font-size: 2vw;'>Bienvenida Elsa Aurora Ruiz Revilla</p>
 
 
                   <br>
