--- a/adm/permisos.html
+++ b/adm/permisos.html
@@ -46,29 +46,24 @@
 
         <a class="navbar-brand mb-0 h1" href="#">
 
-          Entes
+          Administradores
         </a>
         <div class="nav-menu">
           <nav>
             <ul>
               <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/todo.svg" alt="PDN">
-                  <p>Todo</p>
-                </a>
-              </li>
-              <li><a href="adm/ingreso.html">
-                <img src="../imgs/menu/tabla-larga.svg" alt="PDN">
-                <p>Tabla larga</p>
+                <img src="../imgs/menu/nuevo.svg" alt="PDN">
+                <p>Nuevo</p>
               </a>
-            </li>
+            </li> 
             <li><a href="adm/ingreso.html">
-              <img src="../imgs/menu/tabla-corta.svg" alt="PDN">
-              <p>Tabla corta</p>
+              <img src="../imgs/menu/nuevo.svg" alt="PDN">
+              <p>Nuevo</p>
             </a>
-          </li>
+          </li>             
               <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/menu.svg" alt="PDN">
-                  <p>Menu</p>
+                  <img src="../imgs/menu/cancelar.svg" alt="PDN">
+                  <p>Cancelar</p>
                 </a>
               </li>
               
@@ -111,7 +106,7 @@
 
 
                   <b>Hoy es Martes, 12 de Marzo de 2024</b>
-                  <p style='font-size: 2vw;'>Se muestran resultados</p>
+                  <p style='font-size: 2vw;'>Administradores</p>
 
 
                   <br>
