--- a/adm/cambiar.html
+++ b/adm/cambiar.html
@@ -6,16 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/dashboard.css" rel="stylesheet">
-  <link href="css/font.css" rel="stylesheet">
-  <link href="css/tabla.css" rel="stylesheet">
+  <link href="../css/dashboard.css" rel="stylesheet">
+  <link href="../css/font.css" rel="stylesheet">
+  <link href="../css/tabla.css" rel="stylesheet">
   <!-- <link href="css/tabla-colores.css" rel="stylesheet"> -->
-  <link href="css/grafica.css" rel="stylesheet">
+  <link href="../css/grafica.css" rel="stylesheet">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
-  <title>Tablero Estadístico</title>
+  <title>Entes</title>
+
+
+  <style>
+    .titAzul {
+      background-color: #CED1FB;
+      border-bottom: 1px solid #8B008B;
+      border-right: 1px solid #8B008B;
+      font-size: 12px;
+      font-weight: bold;
+      color: #0000CD;
+      font-family: Verdana;
+      text-align: center
+    }
+  </style>
+
 </head>
 
 <body class="bg-light">
@@ -26,18 +41,25 @@
         aria-controls="navbarToggler-PDN" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <img class="logo" src="imgs/logo_pdn-transparente.svg" alt="Logo" class="d-inline-block align-text-top">
+      <img class="logo" src="../imgs/logo_pdn-transparente.svg" alt="Logo" class="d-inline-block align-text-top">
       <div class="collapse navbar-collapse justify-content-between" id="navbarToggler-PDN">
 
         <a class="navbar-brand mb-0 h1" href="#">
 
-          Tablero Estadístico de Cobertura Nacional de Interconexión
+          Cambiar contraseña
         </a>
         <div class="nav-menu">
           <nav>
             <ul>
               <li><a href="adm/ingreso.html">
-                  <p>Botón</p>
+                  <img src="../imgs/menu/menu.svg" alt="PDN">
+                  <p>Menu</p>
+                </a>
+              </li>
+              
+              <li><a href="adm/ingreso.html">
+                  <img src="../imgs/menu/salir.svg" alt="PDN">
+                  <p>Salir</p>
                 </a>
               </li>
             </ul>
@@ -50,19 +72,40 @@
   </header>
 
 
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-x-12">
         <div class="page-title-box">
           <h4>&nbsp;</h4>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div class="col-xl-12">
         <div class="card">
 
           <div class="card-body scroll">
+
+            <table border="0">
+              <tr>
+
+
+                <td width="30">&nbsp;</td>
+
+                <td valign="top">
+
+
+                  <b>Hoy es Martes, 12 de Marzo de 2024</b>
+                  <p style='font-size: 2vw;'>Cambiar contraseña</p>
+
+
+                  <br>
+
+
+
+                </td>
+
+            </table>
 
           </div>
 
@@ -84,10 +127,10 @@
     var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
       return new bootstrap.Tooltip(tooltipTriggerEl)
     })
-    </script>
+  </script>
 
 
-  
+
 </body>
 
 </html>
