--- a/adm/template.html
+++ b/adm/template.html
@@ -15,22 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
-  <title>Entes</title>
-
-
-  <style>
-    .titAzul {
-      background-color: #CED1FB;
-      border-bottom: 1px solid #8B008B;
-      border-right: 1px solid #8B008B;
-      font-size: 12px;
-      font-weight: bold;
-      color: #0000CD;
-      font-family: Verdana;
-      text-align: center
-    }
-  </style>
-
+  <title>Tablero Estadístico</title>
 </head>
 
 <body class="bg-light">
@@ -46,37 +31,31 @@
 
         <a class="navbar-brand mb-0 h1" href="#">
 
-          Entes
+          Tablero Estadístico de Cobertura Nacional de Interconexión
         </a>
         <div class="nav-menu">
           <nav>
             <ul>
               <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/todo.svg" alt="PDN">
-                  <p>Todo</p>
+                <img src="imgs/menu/ico_mesa-ayuda.svg" alt="PDN">
+                  <p>Ingreso</p>
                 </a>
               </li>
               <li><a href="adm/ingreso.html">
-                <img src="../imgs/menu/tabla-larga.svg" alt="PDN">
-                <p>Tabla larga</p>
+                <img src="imgs/menu/ico_mesa-ayuda.svg" alt="PDN">
+                <p>Botón</p>
               </a>
             </li>
             <li><a href="adm/ingreso.html">
-              <img src="../imgs/menu/tabla-corta.svg" alt="PDN">
-              <p>Tabla corta</p>
+              <img src="imgs/menu/ico_mesa-ayuda.svg" alt="PDN">
+              <p>Botón</p>
             </a>
           </li>
-              <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/menu.svg" alt="PDN">
-                  <p>Menu</p>
-                </a>
-              </li>
-              
-              <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/salir.svg" alt="PDN">
-                  <p>Salir</p>
-                </a>
-              </li>
+          <li><a href="adm/ingreso.html">
+            <img src="imgs/menu/ico_mesa-ayuda.svg" alt="PDN">
+            <p>Botón</p>
+          </a>
+        </li>
             </ul>
           </nav>
         </div>
@@ -87,40 +66,19 @@
   </header>
 
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-x-12">
+      <div class="col-12">
         <div class="page-title-box">
           <h4>&nbsp;</h4>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-12">
+      <div class="col-12">
         <div class="card">
 
           <div class="card-body scroll">
-
-            <table border="0">
-              <tr>
-
-
-                <td width="30">&nbsp;</td>
-
-                <td valign="top">
-
-
-                  <b>Hoy es Martes, 12 de Marzo de 2024</b>
-                  <p style='font-size: 2vw;'>Se muestran resultados</p>
-
-
-                  <br>
-
-
-
-                </td>
-
-            </table>
 
           </div>
 
@@ -142,10 +100,10 @@
     var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
       return new bootstrap.Tooltip(tooltipTriggerEl)
     })
-  </script>
+    </script>
 
 
-
+  
 </body>
 
 </html>
