--- a/adm/permisos.html
+++ b/adm/permisos.html
@@ -57,16 +57,20 @@
               </a>
             </li> 
             <li><a href="adm/ingreso.html">
-              <img src="../imgs/menu/nuevo.svg" alt="PDN">
-              <p>Nuevo</p>
+              <img src="../imgs/menu/cancelar.svg" alt="PDN">
+              <p>Cancelar</p>
             </a>
           </li>             
               <li><a href="adm/ingreso.html">
-                  <img src="../imgs/menu/cancelar.svg" alt="PDN">
-                  <p>Cancelar</p>
+                  <img src="../imgs/menu/eliminar.svg" alt="PDN">
+                  <p>Eliminar</p>
                 </a>
               </li>
-              
+              <li><a href="adm/ingreso.html">
+                <img src="../imgs/menu/editar.svg" alt="PDN">
+                <p>Editar</p>
+              </a>
+            </li>
               <li><a href="adm/ingreso.html">
                   <img src="../imgs/menu/salir.svg" alt="PDN">
                   <p>Salir</p>
