--- a/adm/entes-adm.html
+++ b/adm/entes-adm.html
@@ -174,7 +174,7 @@
 
 
               </form>
-              <input class="form-control" id="myInput" type="text" placeholder="Search..">
+              <input class="form-control" id="myInput" type="text" placeholder="Buscar...">
               <br>
               <table class="cobertura_table adm rounded ">
                 <thead>
