--- a/adm/contrasena.html
+++ b/adm/contrasena.html
@@ -43,9 +43,7 @@
       </button>
       <img class="logo" src="../imgs/logo_pdn-transparente.svg" alt="Logo" class="d-inline-block align-text-top">
       <div class="collapse navbar-collapse justify-content-between" id="navbarToggler-PDN">
-
         <a class="navbar-brand mb-0 h1" href="#">
-
           Cambiar contraseña
         </a>
         <div class="nav-menu">
@@ -56,7 +54,6 @@
                   <p>Menu</p>
                 </a>
               </li>
-
               <li><a href="adm/ingreso.html">
                   <img src="../imgs/menu/salir.svg" alt="PDN">
                   <p>Salir</p>
@@ -66,8 +63,6 @@
           </nav>
         </div>
       </div>
-
-
     </nav>
   </header>
 
@@ -83,27 +78,14 @@
     <div class="row">
       <div class="col-xl-12">
         <div class="card">
-
-          <div class="card-body scroll">
-
+          <div class="card-body">
             <table class="no-visible" border="0">
               <tr>
-
-
                 <td width="30">&nbsp;</td>
-
                 <td valign="top">
-
-
-
-
                   <form name="cambiar" method="post" action="cambia.php" onSubmit="return verifica_cambiar();">
                     </br>
-
-
                     <table border="0">
-
-
                       <tr>
                         <th>
                           <div align="right">Contraseña actual</div>
@@ -118,11 +100,7 @@
                             &nbsp;
                           </div>
                         </td>
-
                       </tr>
-
-
-
                       <tr>
                         <th>
                           <div align="right">Contraseña nueva</div>
@@ -138,9 +116,6 @@
                           </div>
                         </td>
                       </tr>
-
-
-
                       <tr>
                         <th>
                           <div align="right">Escribe otra vez tu contraseña nueva</div>
@@ -154,56 +129,23 @@
                           &nbsp;
                         </td>
                       </tr>
-
-
-
-
-
-
-
                       <tr>
                         <th>
                           <!--<div align="right"><a href="../recordar.php">Olvid&eacute; mi contrase&ntilde;a</a> </div>-->
                         </th>
                         <th>
-
                         </th>
-                        <td width="75"><input class="btn btn-primary" type="submit" name="CAMBIAR" id="CAMBIAR" value="CAMBIAR CONTRASEÑA"></td>
-
+                        <td width="75"><input class="btn btn-primary" type="submit" name="CAMBIAR" id="CAMBIAR"
+                            value="CAMBIAR CONTRASEÑA"></td>
                       </tr>
-
-
-
-
-
-
-
-
                     </table>
-
-
-
                   </form>
-
-
-
-
                 </td>
-
             </table>
-
           </div>
-
         </div>
       </div>
-
     </div>
-
-
-
-
-
-
   </div>
 
   <script>
