--- a/adm/template.html
+++ b/adm/template.html
@@ -38,7 +38,7 @@
             <ul>
               <li><a href="adm/ingreso.html">
                 <img src="imgs/menu/ico_mesa-ayuda.svg" alt="PDN">
-                  <p>Ingreso</p>
+                  <p>Botón</p>
                 </a>
               </li>
               <li><a href="adm/ingreso.html">
@@ -66,7 +66,7 @@
   </header>
 
 
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="page-title-box">
@@ -78,8 +78,8 @@
       <div class="col-12">
         <div class="card">
 
-          <div class="card-body scroll">
-tabla aqui
+          <div class="card-body">
+El contenido va aqui
           </div>
 
         </div>
